<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.detail_pokemon.DetailPokemonFragment">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/card_order_now">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/collapseApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/white"
            android:fitsSystemWindows="true">
            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/white"
                android:background="@color/white"
                app:expandedTitleMarginStart="70dp"
                app:forceApplySystemWindowInsetTop="true"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:titleCollapseMode="fade">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/collapseApp"
                    app:layout_collapseMode="parallax">

                    <ImageView
                        android:id="@+id/img_pokemon"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimens_286dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ContentDescription" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_scrollFlags="scroll|enterAlways"
                    android:layout_marginHorizontal="@dimen/dimens_50dp"
                    app:layout_collapseMode="pin" />

                <com.pokemon.shared.custom_view.GeneralToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_scrollFlags="scroll|enterAlways"
                    app:layout_collapseMode="pin"
                    app:layout_constraintTop_toTopOf="parent"
                    app:toolbarBackIcon="@drawable/ic_arrow_back_black"
                    app:toolbarBackIconTint="@color/black"
                    app:toolbarBackground="@color/transparent"
                    app:toolbarTitle=""/>

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-20dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <androidx.core.widget.NestedScrollView
                android:id="@+id/scroll_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/card_treatment_detail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_rounded_top_white"
                    android:paddingTop="16dp">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cl_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/dimens_16dp"
                        app:layout_constraintTop_toTopOf="parent">
                        <TextView
                            android:id="@+id/tv_pokemon_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="@dimen/text_22sp"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            tools:text="Pikachu"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>
                        <View
                            android:id="@+id/divider_horizon_1"
                            android:layout_width="@dimen/dimens_40dp"
                            android:layout_height="1dp"
                            android:layout_marginTop="@dimen/dimens_10dp"
                            android:background="@color/gray"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_pokemon_name"/>
                        <LinearLayout
                            android:id="@+id/ll_stats"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimens_10dp"
                            android:paddingVertical="@dimen/dimens_5dp"
                            android:orientation="vertical"
                            app:layout_constraintTop_toBottomOf="@id/tv_pokemon_name"/>
                        <TextView
                            android:id="@+id/tv_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimens_20dp"
                            tools:text="Grass / Poison"
                            android:textSize="@dimen/text_18sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/divider01"
                            app:layout_constraintTop_toBottomOf="@id/ll_stats"
                            app:layout_constraintHorizontal_chainStyle="spread"/>
                        <View
                            android:id="@+id/divider01"
                            android:layout_width="1dp"
                            android:layout_height="40dp"
                            android:layout_marginTop="@dimen/dimens_20dp"
                            android:background="@color/gray"
                            android:layout_marginStart="@dimen/dimens_20dp"
                            app:layout_constraintTop_toBottomOf="@id/ll_stats"
                            app:layout_constraintStart_toEndOf="@id/tv_type"
                            app:layout_constraintEnd_toStartOf="@id/tv_weight"/>
                        <TextView
                            android:id="@+id/tv_weight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimens_20dp"
                            android:layout_marginStart="@dimen/dimens_20dp"
                            tools:text="5.58kg"
                            android:textSize="@dimen/text_18sp"
                            app:layout_constraintStart_toEndOf="@id/divider01"
                            app:layout_constraintEnd_toStartOf="@id/divider02"
                            app:layout_constraintTop_toBottomOf="@id/ll_stats" />
                        <View
                            android:id="@+id/divider02"
                            android:layout_width="1dp"
                            android:layout_height="40dp"
                            android:layout_marginTop="@dimen/dimens_20dp"
                            android:background="@color/gray"
                            android:layout_marginStart="@dimen/dimens_20dp"
                            app:layout_constraintTop_toBottomOf="@id/ll_stats"
                            app:layout_constraintStart_toEndOf="@id/tv_weight"
                            app:layout_constraintEnd_toStartOf="@id/tv_height"/>
                        <TextView
                            android:id="@+id/tv_height"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimens_20dp"
                            android:layout_marginStart="@dimen/dimens_20dp"
                            tools:text="0.58 m"
                            android:textSize="@dimen/text_18sp"
                            app:layout_constraintStart_toEndOf="@id/divider02"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/ll_stats"/>
                        <TextView
                            android:id="@+id/tv_txt_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            app:layout_constraintTop_toBottomOf="@id/tv_type"
                            app:layout_constraintStart_toStartOf="@id/tv_type"
                            app:layout_constraintEnd_toEndOf="@id/tv_type"
                            android:text="@string/type"/>
                        <TextView
                            android:id="@+id/tv_txt_weight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            app:layout_constraintTop_toBottomOf="@id/tv_weight"
                            app:layout_constraintStart_toStartOf="@id/tv_weight"
                            app:layout_constraintEnd_toEndOf="@id/tv_weight"
                            android:text="@string/weight"/>
                        <TextView
                            android:id="@+id/tv_txt_height"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            app:layout_constraintTop_toBottomOf="@id/tv_height"
                            app:layout_constraintStart_toStartOf="@id/tv_height"
                            app:layout_constraintEnd_toEndOf="@id/tv_height"
                            android:text="@string/height"/>
                        <View
                            android:id="@+id/divider_horizon"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="@dimen/dimens_10dp"
                            android:background="@color/gray"
                            app:layout_constraintTop_toBottomOf="@id/tv_txt_weight"/>
                        <TextView
                            android:id="@+id/tv_txt_moves"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimens_20dp"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_18sp"
                            android:text="@string/moves_list"
                            app:layout_constraintTop_toBottomOf="@id/divider_horizon"/>
                        <View
                            android:id="@+id/divider_horizon_2"
                            android:layout_width="@dimen/dimens_40dp"
                            android:layout_height="1dp"
                            android:layout_marginTop="@dimen/dimens_10dp"
                            android:background="@color/gray"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_txt_moves"/>
                        <LinearLayout
                            android:id="@+id/ll_moves"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_constraintTop_toBottomOf="@id/divider_horizon_2"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_order_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btn_order_now"
            android:background="@drawable/button_rounded_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimens_16dp"
            android:layout_marginVertical="8dp"
            android:textSize="@dimen/text_16sp"
            android:textColor="@color/white"
            android:text="@string/catching"
            android:textAllCaps="false"
            android:visibility="gone"/>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>